# complaints-handling

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  current-sprint.md  implementation-plan.md  pyproject.toml
.claude/commands/: finalize-sprint.md  implement.md  load-context.md  review-and-fix.md  weekly-docs.md
.github/workflows/: ci.yml
data/imdrf/: annex_a_device_problems.json  annex_c_patient_problems.json
data/test_cases/call/: _manifest.json  call_001_structured_caller.json  call_002_rambling_caller.json  call_003_emotional_caller.json  call_004_technical_caller.json  call_005_language_barrier.json
src/: __init__.py
src/audit/: __init__.py  logger.py  models.py
src/cli/: __init__.py  display.py  evaluate.py  main.py  process.py  review.py
src/coding/: __init__.py  service.py
src/evaluation/: __init__.py  ablation.py  calibration.py  metrics.py  models.py  reporter.py  runner.py  storage.py
src/imdrf/: __init__.py  codes.py  models.py
src/intake/: __init__.py  forms.py
src/llm/: __init__.py  client.py  parsing.py  prompts.py
src/models/: __init__.py  coding.py  complaint.py  enums.py  mdr.py
src/pipeline/: __init__.py  forms.py  models.py
src/routing/: __init__.py  mdr.py
src/testing/: __init__.py  test_case_loader.py
tests/: __init__.py  conftest.py  test_ablation.py  test_audit.py  test_calibration.py  test_case_loader_test.py  test_coding_service.py  test_e2e_forms.py  test_evaluate_cli.py  test_evaluation.py  test_evaluation_runner.py  test_form_intake.py  test_imdrf_codes.py  test_llm_client.py  test_mdr_service.py  test_models.py  test_pipeline.py  test_review_cli.py  test_smoke.py
(+22 files in other folders)
