[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "complaints-handling"
version = "0.1.0"
description = "AI-powered medical device complaint handling system with IMDRF coding"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Will MacDonald" }
]
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
complaints = "src.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
